{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "bc8b9611-a167-4f8c-8e31-cccf6066c98b",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "1ecd5ad4-e66a-4211-8f2a-6edfff1b14b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveVertical",
                    "type": "Value",
                    "id": "c2667064-a384-463a-afce-3250ce2070c4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateVertical",
                    "type": "Value",
                    "id": "f3783146-e443-485c-b129-c2378256af04",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateHorizontal",
                    "type": "Value",
                    "id": "306e4754-ac38-4bf7-a729-ce0af998073f",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UseItem",
                    "type": "Value",
                    "id": "77a69841-89fe-4b48-90c6-aa4156b25c37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "64d64155-1b7a-4c49-b1bd-77d890772500",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "f01093d5-eba7-4ad1-9ee3-b2945c21ec00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftStick",
                    "id": "7aa5dddb-38ee-4b88-9c01-7c7cf63879f9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "06992103-d293-411b-9676-5e6045484647",
                    "path": "<Linux::SonyCorp::WirelessController>/Stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c25809e3-b7ce-4fe4-81b1-d32650addb3e",
                    "path": "<Linux::SonyCorp::WirelessController>/Stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "AD",
                    "id": "d80ae93b-6a03-4d0a-bc3b-e5a26d0c0cce",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3d8ca4b2-ec6a-42f2-9703-290049cc70b9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "56e6fa41-8fa2-4267-9c47-d4e1378e260e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "xBox",
                    "id": "9e9654a4-3839-4746-8d16-388945a6b34d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "03572255-4b6f-4071-a55c-f945bc14b7b6",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b8a008c0-04c6-4118-b725-d89a80a590ed",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "41ffec0a-0b83-4b04-b89e-747fec7a5da0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8ce6c72b-3c62-4649-ac46-a9dfa567d106",
                    "path": "<Linux::SonyCorp::WirelessController>/Stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "24870f08-cac9-4149-9bff-fc3356fca16a",
                    "path": "<Linux::SonyCorp::WirelessController>/Stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "c2adbc7e-ca2b-45c5-a80b-86303d50a8d7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "42bc2406-cf74-43f4-9cd7-fd02531104cb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1e480e64-d19b-4e88-99c2-74a7b1511331",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "xBox",
                    "id": "a4bc5f92-205b-46b8-9f13-18e289e9fbb5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ea39f21b-26d2-4565-b45d-e98c3346702f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "07a75956-9a74-47b4-a2b8-fa66507c6b4c",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c0206d26-9e54-4f34-8df6-a8eb2f3b6fa9",
                    "path": "<Linux::SonyCorp::WirelessController>/TriggerLeft2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc7ea288-8b8e-458e-818c-7f826082b347",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f82a16bc-41aa-46a1-a3fe-f4d2b36ea91c",
                    "path": "<Linux::SonyCorp::WirelessController>/TriggerRight2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c333ea00-c0a2-4134-9ee6-301e456c394f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f125f16-2f0c-4161-a5ab-39a39e256752",
                    "path": "<Linux::SonyCorp::WirelessController>/RotateZ",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RotateVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "xBox",
                    "id": "78eeac06-bbc0-4a45-a566-57a9cca122b7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4ae65703-1e1e-4c99-a9c2-304ee6233c58",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2ae2029e-48f5-48d1-81ba-2eb34122f7e8",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "113ff844-4c9c-418d-baca-1e0d703fbe16",
                    "path": "<Linux::SonyCorp::WirelessController>/Z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "xBox",
                    "id": "e4be216b-5b4b-40c7-b4e9-5035b1ff5f08",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6a5da881-7ad0-408c-af46-6bb216f5fc75",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6e2d002e-515a-48d4-93f1-f9a13d05f3c2",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c02533f8-842f-465e-abeb-fb9c856c0d22",
                    "path": "<Linux::SonyCorp::WirelessController>/Start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d635841d-243e-4f8f-a8ad-1edae5451cbb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Linux::SonyCorp::WirelessController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}